--- a/attestation-viewer/src/App.css
+++ b/attestation-viewer/src/App.css
@@ -131,6 +131,10 @@ h1, h2, h3, h4, h5, h6 {
   font-weight: bold;
 }
 
+.search-item .predicate {
+  color: var(--color-2)
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
